IAC/kubernetes/applications/argocd/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-public
  annotations:
    external-dns.alpha.kubernetes.io/hostname: argocd.k3s.sbriggs.io
    external-dns.alpha.kubernetes.io/ttl: "300"
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
spec:
  type: ExternalName
  externalName: kube.sbriggs.io
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
  sessionAffinity: None
