IAC/kubernetes/applications/argocd/ingress.yaml
#---
#apiVersion: cert-manager.io/v1
#kind: Certificate
#metadata:
#  name: argocd-k3s-cert
#spec:
#  commonName: argocd.k3s.sbriggs.io
#  secretName: argocd-k3s-cert
#  dnsNames:
#    - argocd.k3s.sbriggs.io
#  issuerRef:
#    name: acme-prod
#    kind: ClusterIssuer
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argocd.k3s.sbriggs.io`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.k3s.sbriggs.io`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  #  tls:
    #    secretName: argocd-k3s-cert
